<resources>
    <string name="app_name">FeelsBook</string>
    <string name="joy">joy</string>
    <string name="love">love</string>
    <string name="fear">fear</string>
    <string name="surprise">surprise</string>
    <string name="anger">anger</string>
    <string name="sadness">sadness</string>
    <string name="history">history</string>
    <string name="record">record</string>
    <string name="comment">comment</string>
    <string name="time">time</string>
    <string name="feeling">feeling</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save">save</string>


</resources>
